add comment modal; add base component; update home page

--- a/src/app/pages/comments/comment-list/comment-list.component.html
+++ b/src/app/pages/comments/comment-list/comment-list.component.html
@@ -30,7 +30,8 @@
 >
   <thead>
   <tr>
-    <th nzWidth="40px" [nzChecked]="allChecked" [nzIndeterminate]="indeterminate" (nzCheckedChange)="onAllChecked($event)"></th>
+    <th nzWidth="40px" [nzChecked]="allChecked" [nzIndeterminate]="indeterminate"
+        (nzCheckedChange)="onAllChecked($event)"></th>
     <th nzWidth="260px" nzColumnKey="content">评论内容</th>
     <th nzWidth="180px" nzColumnKey="postTitle">文章</th>
     <th nzWidth="130px" nzColumnKey="created" [nzSortFn]="true" [nzSortPriority]="true">时间</th>
@@ -43,7 +44,8 @@
   </thead>
   <tbody>
   <tr *ngFor="let data of commentList">
-    <td [nzChecked]="checkedMap[data.commentId] || false" (nzCheckedChange)="onItemChecked(data.commentId, $event)"></td>
+    <td [nzChecked]="checkedMap[data.commentId] || false"
+        (nzCheckedChange)="onItemChecked(data.commentId, $event)"></td>
     <td nzEllipsis [title]="data.commentContent">
       <a (click)="editComment('detail', data)">{{ data.commentContent }}</a>
     </td>
@@ -52,18 +54,19 @@
     </td>
     <td nzEllipsis [title]="data.created | date:'yyyy-MM-dd HH:mm'">{{ data.created | date:'yy-MM-dd HH:mm' }}</td>
     <td>
-      <a [ngClass]="'status-' + data.commentStatus" routerLink="./" [queryParams]="{status: data.commentStatus}">{{ data.commentStatus | commentStatus }}</a>
+      <a [ngClass]="'status-' + data.commentStatus" routerLink="./"
+         [queryParams]="{status: data.commentStatus}">{{ data.commentStatus | commentStatus }}</a>
     </td>
     <td nzAlign="right" [title]="data.commentVote">{{ data.commentVote }}</td>
     <td nzEllipsis [title]="data.commentAuthor">{{ data.commentAuthor }}</td>
     <td nzEllipsis [title]="data.commentAuthorEmail">{{ data.commentAuthorEmail }}</td>
     <td nzRight>
       <ng-container *ngIf="data.commentStatus === 'pending'">
-        <a class="table-row-btn-normal" (click)="auditComments('normal', [data.commentId])">批准</a>
+        <a class="button-normal" (click)="auditComments('normal', data.commentId)">批准</a>
         <nz-divider nzType="vertical"></nz-divider>
-        <a class="table-row-btn-reject" (click)="auditComments('reject', [data.commentId])">驳回</a>
+        <a class="button-reject" (click)="auditComments('reject', data.commentId)">驳回</a>
         <nz-divider nzType="vertical"></nz-divider>
-        <a class="table-row-btn-spam" (click)="auditComments('spam', [data.commentId])">垃圾评论</a>
+        <a class="button-spam" (click)="auditComments('spam', data.commentId)">垃圾评论</a>
         <nz-divider nzType="vertical"></nz-divider>
       </ng-container>
       <ng-container *ngIf="data.commentStatus === 'normal' || data.commentStatus === 'pending'">
@@ -73,7 +76,7 @@
       <a (click)="editComment('edit', data)">编辑</a>
       <ng-container *ngIf="data.commentStatus !== 'trash'">
         <nz-divider nzType="vertical"></nz-divider>
-        <a (click)="auditComments('trash', [data.commentId])">删除</a>
+        <a (click)="auditComments('trash', data.commentId)">删除</a>
       </ng-container>
     </td>
   </tr>
@@ -83,131 +86,17 @@
   当前：第 <span style="color: red">{{ range[0] }}-{{ range[1] }}</span> 条，共：<span style="color: red">{{ total }}</span> 条
 </ng-template>
 <ng-template #confirmModalContent>
-  <div *ngIf="auditAction === 'spam'">
-    <div>确定将这 <span class="confirm-warning">{{checkedLength}}</span> 条评论标记为垃圾评论吗？</div>
-  </div>
-  <div *ngIf="auditAction !== 'spam'">
-    <ng-container [ngSwitch]="auditAction">
-      <div *ngSwitchCase="'normal'">确定批准这 <span class="confirm-warning">{{checkedLength}}</span> 条评论吗？</div>
-      <div *ngSwitchCase="'reject'">确定驳回这 <span class="confirm-warning">{{checkedLength}}</span> 条评论吗？</div>
-      <div *ngSwitchCase="'trash'">确定删除这 <span class="confirm-warning">{{checkedLength}}</span> 条评论吗？</div>
-    </ng-container>
-  </div>
+  <ng-container [ngSwitch]="auditAction">
+    <div *ngSwitchCase="'spam'">确定将这 <span class="confirm-warning">{{checkedLength}}</span> 条评论标记为垃圾评论吗？</div>
+    <div *ngSwitchCase="'normal'">确定批准这 <span class="confirm-warning">{{checkedLength}}</span> 条评论吗？</div>
+    <div *ngSwitchCase="'reject'">确定驳回这 <span class="confirm-warning">{{checkedLength}}</span> 条评论吗？</div>
+    <div *ngSwitchCase="'trash'">确定删除这 <span class="confirm-warning">{{checkedLength}}</span> 条评论吗？</div>
+  </ng-container>
 </ng-template>
-<nz-modal
-  [(nzVisible)]="commentModalVisible"
-  [nzTitle]="commentModalTitle"
-  [nzContent]="commentModalContent"
-  [nzFooter]="commentModalFooter"
-  (nzOnCancel)="closeCommentModal()"
-  [nzMaskClosable]="commentOperation === 'detail'"
->
-  <ng-template #commentModalTitle>
-    <ng-container [ngSwitch]="commentOperation">
-      <ng-container *ngSwitchCase="'detail'">查看评论</ng-container>
-      <ng-container *ngSwitchCase="'edit'">编辑评论</ng-container>
-      <ng-container *ngSwitchCase="'reply'">回复评论</ng-container>
-    </ng-container>
-  </ng-template>
-  <ng-template #commentModalContent>
-    <form nz-form [formGroup]="commentForm">
-      <nz-form-item>
-        <nz-form-label [nzSpan]="5">评论文章</nz-form-label>
-        <nz-form-control>
-          <nz-form-text>
-            <a [href]="activeComment.post?.postGuid" target="_blank">{{ activeComment.post?.postTitle }}</a>
-          </nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
-      <ng-container [ngSwitch]="commentOperation">
-        <ng-container *ngSwitchCase="'detail'">
-          <nz-form-item>
-            <nz-form-label [nzSpan]="5">评论内容</nz-form-label>
-            <nz-form-control>
-              <nz-form-text>{{ activeComment.commentContent }}</nz-form-text>
-            </nz-form-control>
-          </nz-form-item>
-          <nz-form-item>
-            <nz-form-label [nzSpan]="5">评论时间</nz-form-label>
-            <nz-form-control>
-              <nz-form-text>{{ activeComment.created | date:'yyyy-MM-dd HH:mm:ss' }}</nz-form-text>
-            </nz-form-control>
-          </nz-form-item>
-          <nz-form-item>
-            <nz-form-label [nzSpan]="5">点赞数</nz-form-label>
-            <nz-form-control>
-              <nz-form-text>{{ activeComment.commentVote }}</nz-form-text>
-            </nz-form-control>
-          </nz-form-item>
-          <nz-form-item>
-            <nz-form-label [nzSpan]="5">评论状态</nz-form-label>
-            <nz-form-control>
-              <nz-form-text [ngClass]="'status-' + activeComment.commentStatus">{{ activeComment.commentStatus | commentStatus }}</nz-form-text>
-            </nz-form-control>
-          </nz-form-item>
-          <nz-form-item>
-            <nz-form-label [nzSpan]="5">评论用户</nz-form-label>
-            <nz-form-control>
-              <nz-form-text>{{ activeComment.commentAuthor }}</nz-form-text>
-            </nz-form-control>
-          </nz-form-item>
-          <nz-form-item>
-            <nz-form-label [nzSpan]="5">评论邮箱</nz-form-label>
-            <nz-form-control>
-              <nz-form-text>{{ activeComment.commentAuthorEmail }}</nz-form-text>
-            </nz-form-control>
-          </nz-form-item>
-        </ng-container>
-        <ng-container *ngSwitchCase="'edit'">
-          <nz-form-item>
-            <nz-form-label nzRequired [nzSpan]="5">评论内容</nz-form-label>
-            <nz-form-control [nzErrorTip]="contentErrorTpl">
-              <nz-textarea-count [nzMaxCharacterCount]="commentMaxLength">
-                <textarea nz-input rows="6" formControlName="commentContent" placeholder="请输入评论内容"></textarea>
-              </nz-textarea-count>
-              <ng-template #contentErrorTpl let-control>
-                <ng-container *ngIf="control.hasError('required')">请输入评论内容</ng-container>
-                <ng-container *ngIf="control.hasError('maxlength')">评论内容最大长度为{{commentMaxLength}}字符</ng-container>
-              </ng-template>
-            </nz-form-control>
-          </nz-form-item>
-          <nz-form-item>
-            <nz-form-label nzRequired [nzSpan]="5">评论状态</nz-form-label>
-            <nz-form-control [nzErrorTip]="statusErrorTpl">
-              <nz-select formControlName="commentStatus" nzPlaceHolder="请选择评论状态">
-                <nz-option *ngFor="let status of commentStatusList" [nzValue]="status.key" [nzLabel]="status.label"></nz-option>
-              </nz-select>
-              <ng-template #statusErrorTpl let-control>
-                <ng-container *ngIf="control.hasError('required')">请选择评论状态</ng-container>
-              </ng-template>
-            </nz-form-control>
-          </nz-form-item>
-        </ng-container>
-        <ng-container *ngSwitchCase="'reply'">
-          <nz-form-item>
-            <nz-form-label [nzSpan]="5">评论内容</nz-form-label>
-            <nz-form-control>
-              <nz-form-text>{{ activeComment.commentContent }}</nz-form-text>
-            </nz-form-control>
-          </nz-form-item>
-          <nz-form-item>
-            <nz-form-label nzRequired [nzSpan]="5">回复内容</nz-form-label>
-            <nz-form-control [nzErrorTip]="replyErrorTpl">
-              <nz-textarea-count [nzMaxCharacterCount]="commentMaxLength">
-                <textarea nz-input rows="6" formControlName="commentContent" placeholder="请输入回复内容"></textarea>
-              </nz-textarea-count>
-              <ng-template #replyErrorTpl let-control>
-                <ng-container *ngIf="control.hasError('required')">请输入回复内容</ng-container>
-                <ng-container *ngIf="control.hasError('maxlength')">回复内容最大长度为{{commentMaxLength}}字符</ng-container>
-              </ng-template>
-            </nz-form-control>
-          </nz-form-item>
-        </ng-container>
-      </ng-container>
-    </form>
-  </ng-template>
-  <ng-template #commentModalFooter>
-    <button nz-button nzType="default" (click)="closeCommentModal()" *ngIf="commentOperation !== 'detail'">取消</button>
-    <button nz-button nzType="primary" (click)="saveComment()" [nzLoading]="saveLoading">确定</button>
-  </ng-template>
-</nz-modal>
+<i-comment-modal
+  *ngIf="commentModalVisible"
+  [action]="commentAction"
+  [comment]="activeComment"
+  (closeModal)="closeCommentModal()"
+  (onSuccess)="onCommentSave()">
+</i-comment-modal>
