--- a/src/app/pages/home/home/home.component.less
+++ b/src/app/pages/home/home/home.component.less
@@ -43,3 +43,42 @@ nz-row:not(:last-child) {
   align-items: center;
   font-size: 24px;
 }
+
+.statistic {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.comment {
+  .comment-item {
+    &:not(:last-child) {
+      padding-bottom: 16px;
+      border-bottom: 1px solid #f0f0f0;
+    }
+
+    &:not(:first-child) {
+      padding-top: 16px;
+    }
+  }
+
+  .comment-item-meta, .comment-item-content {
+    margin-bottom: 8px;
+  }
+
+  .comment-item-meta {
+    font-size: 12px;
+    color: #00000073;
+  }
+
+  .comment-item-actions {
+    a:not(:last-child) {
+      &::after {
+        margin: 0 8px;
+        content: '|';
+        color: rgba(0, 0, 0, .45);
+      }
+    }
+  }
+}
