--- a/src/app/pages/posts/post-form/post-form.component.html
+++ b/src/app/pages/posts/post-form/post-form.component.html
@@ -215,9 +215,8 @@
       <nz-form-item>
         <nz-form-label nzRequired>插入名片</nz-form-label>
         <nz-form-control>
-          <nz-radio-group class="vertical" formControlName="wechatCardFlag" nzName="wechatCardFlag">
-            <label nz-radio [nzValue]="1">带分隔线</label>
-            <label nz-radio [nzValue]="2">仅名片</label>
+          <nz-radio-group formControlName="wechatCardFlag" nzName="wechatCardFlag">
+            <label nz-radio [nzValue]="1">是</label>
             <label nz-radio [nzValue]="0">否</label>
           </nz-radio-group>
         </nz-form-control>
